--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body::before {
     background-image: linear-gradient(115deg,
             rgba(58, 58, 158, 0.8),
             rgba(136, 136, 206, 0.7)),
-        url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+        url(https://www.business.ru/images/news/30653/licenzya1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -79,7 +79,7 @@ button {
 
 .container {
     width: 100%;
-    margin: 3.125rem auto 0 auto;
+    margin: 3.125rem auto 4rem auto;
 }
 
 @media (min-width: 576px) {
